--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
         </div>
 
       </div>
-    </section> --> -->
+    </section> -->
     <!-- End Testimonials Section -->
 
     <!-- ======= Contact Section ======= -->
