--- a/index.html
+++ b/index.html
@@ -336,10 +336,6 @@
 
         <div class="section-title">
           <h2>Certifications</h2>
-<<<<<<< HEAD
-=======
-<!--           <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
->>>>>>> d476f4e3e4d51ffe1521e4c71471a8e6615709eb
         </div>
 
         <div class="row" data-aos="fade-up">
@@ -357,9 +353,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="/Users/vuongduy/Desktop/test/VuongKhacDuy.github.io/assets/img/Certifications/The 10 Day iPhone App Bootcamp - NEW iOS 12 and Xcode 10 .pdf" class="img-fluid" alt="">
+              <img src="assets/img/Certifications/The 10 Day iPhone App Bootcamp - NEW iOS 12 and Xcode 10 .pdf" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="/Users/vuongduy/Desktop/test/VuongKhacDuy.github.io/assets/img/Certifications/The 10 Day iPhone App Bootcamp - NEW iOS 12 and Xcode 10 .pdf" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/Certifications/The 10 Day iPhone App Bootcamp - NEW iOS 12 and Xcode 10 .pdf" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -367,9 +363,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="/Users/vuongduy/Desktop/test/VuongKhacDuy.github.io/assets/img/Certifications/ Consulting Approach to Problem Solving.pdf" class="img-fluid" alt="">
+              <img src="assets/img/Certifications/ Consulting Approach to Problem Solving.pdf" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="/Users/vuongduy/Desktop/test/VuongKhacDuy.github.io/assets/img/Certifications/ Consulting Approach to Problem Solving.pdf" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/Certifications/ Consulting Approach to Problem Solving.pdf" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -387,9 +383,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="/Users/vuongduy/Desktop/test/VuongKhacDuy.github.io/assets/img/Certifications/ Deep Learning and NLP A-Z™- How to create a ChatBot on 12:01:2021.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/Certifications/ Deep Learning and NLP A-Z™- How to create a ChatBot on 12:01:2021.jpeg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="/Users/vuongduy/Desktop/test/VuongKhacDuy.github.io/assets/img/Certifications/ Deep Learning and NLP A-Z™- How to create a ChatBot on 12:01:2021.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/Certifications/ Deep Learning and NLP A-Z™- How to create a ChatBot on 12:01:2021.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -397,9 +393,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="/Users/vuongduy/Desktop/test/VuongKhacDuy.github.io/assets/img/Certifications/Customer Service English Essentials.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/Certifications/Customer Service English Essentials.jpeg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="/Users/vuongduy/Desktop/test/VuongKhacDuy.github.io/assets/img/Certifications/Customer Service English Essentials.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/Certifications/Customer Service English Essentials.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -417,9 +413,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="/Users/vuongduy/Desktop/test/VuongKhacDuy.github.io/assets/img/Certifications/chứng chỉ Marchine Learning.pdf" class="img-fluid" alt="">
+              <img src="assets/img/Certifications/chứng chỉ Marchine Learning.pdf" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="/Users/vuongduy/Desktop/test/VuongKhacDuy.github.io/assets/img/Certifications/chứng chỉ Marchine Learning.pdf" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/Certifications/chứng chỉ Marchine Learning.pdf" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -427,9 +423,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="/Users/vuongduy/Desktop/test/VuongKhacDuy.github.io/assets/img/Certifications/Python-CodeLearn_certification.png" class="img-fluid" alt="">
+              <img src="assets/img/Certifications/Python-CodeLearn_certification.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="/Users/vuongduy/Desktop/test/VuongKhacDuy.github.io/assets/img/Certifications/Python-CodeLearn_certification.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/Certifications/Python-CodeLearn_certification.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
