--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <h1 class="text-light"><a href="index.html">Vuong Khac Duy</a></h1>
         <div class="social-links mt-3 text-center">
           <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
-          <a href="https://www.facebook.com/ElbyTyn/" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <!-- <a href="https://www.facebook.com/ElbyTyn/" class="facebook"><i class="bx bxl-facebook"></i></a> -->
           <!-- <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a> -->
           <a href="vuongkhacduy@gmail.com" class="google-plus"><i class="bx bxl-skype"></i></a>
           <a href="https://www.linkedin.com/in/duy-vuong-786146138/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
@@ -105,7 +105,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>19 March 1996</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>VuongKhacDuy.github.io</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>(+84) 902844839</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>(+84) 902844xxx</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Ho Chi Minh City, Viet Nam </span></li>
                 </ul>
               </div>
