--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
+          <!-- <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li> -->
+          <!-- <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li> -->
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -78,8 +78,13 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Always looking for challenging projects and technology environments to grow myself, both technical skills and soft skills. Software development criteria are always towards convenience, optimization and based on varying users and customers' demands. In addition, developing applications is easy to read, accessible code that makes it easy for other developers to fix and maintain.</p>
+          <p>I am an iOS developer. Currently, I am working at CMCGlobal, and have joined various mobile application projects. Being experienced and having a comprehensive knowledge of creating user-friendly.</p>
+          <br><p>I have also experience includes working with small to large applications <br>
+            I stay updated on all the latest developments and trends. 
+          </p>
+          <br> <p>Always looking for challenging projects and technology environments to grow myself, both technical skills and soft skills. Software development criteria are always towards convenience, optimization and based on varying users and customers' demands. In addition, developing applications is easy to read, accessible code that makes it easy for other developers to fix and maintain.</p>
           <p></br>With a passion for continuous learning, improve self-skills and grow up with advanced opportunities.</p>
+           
         </div>
 
         <div class="row">
@@ -166,7 +171,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>I am currently working as an IOS developer at CMCGlobal, and have joined various mobile application projects. Being experienced and having a comprehensive knowledge of creating user-friendly.</p>
+          <!-- <p>I am currently working as an iOS developer at CMCGlobal, and have joined various mobile application projects. Being experienced and having a comprehensive knowledge of creating user-friendly.</p>
           <p>I have also experience includes working with small to large applications such as: 
             <ul>
               <li>E-commerce</li>
@@ -175,7 +180,7 @@
             </ul>
             
             I stay updated on all the latest developments and trends. 
-          </p>
+          </p> -->
         </div>
 
         <div class="row">
@@ -244,7 +249,7 @@
     <!-- End Resume Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio section-bg">
+    <!-- <section id="portfolio" class="portfolio section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -336,7 +341,7 @@
         </div>
 
       </div>
-    </section><!--End Portfolio Section
+    </section><!--End Portfolio Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
