update phone number

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>19 March 1996</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>VuongKhacDuy.github.io</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>(+84) 902844xxx</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>(+84) 902844839</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Ho Chi Minh City, Viet Nam </span></li>
                 </ul>
               </div>
@@ -191,7 +191,7 @@
               <p><em>Application developer with 3+ years of experience develop application for iOS operating system. I am presently employed as an iOS developer at CMCGlobal, where I am involved in a number of mobile application projects. Being experienced and well-versed in the development of user-friendly</em></p>
               <ul>
                 <li>Thu Duc City, Ho Chi Minh, Viet Nam, 71351</li>
-                <li>(+84) 902844xxx</li>
+                <li>(+84) 902844839</li>
                 <li>vuongkhacduy@gmail.com</li>
               </ul>
             </div>
@@ -365,7 +365,7 @@
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>(+84) 902844xxx</p>
+                <p>(+84) 902844839</p>
               </div>
 
               <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAMusurBZuHL-_q4lhr5T7iSbprU7oaNy8
