--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     <!-- End Resume Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <!-- <section id="portfolio" class="portfolio section-bg">
+    <section id="portfolio" class="portfolio section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -341,7 +341,7 @@
         </div>
 
       </div>
-    </section><!--End Portfolio Section -->
+    </section><!--End Portfolio Section
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
