--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
     <!-- End Resume Section -->
 
     <!-- ======= Portfolio Section ======= -->
+    <!--
     <section id="portfolio" class="portfolio section-bg">
       <div class="container">
 
@@ -341,7 +342,9 @@
         </div>
 
       </div>
-    </section><!--End Portfolio Section
+    </section>
+    -->
+    <!--End Portfolio Section-->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
