--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
     <!-- End Resume Section -->
 
     <!-- ======= Project Portfolio Section ======= -->
-    <!-- <section id="portfolio" class="portfolio section-bg">
+    <section id="portfolio" class="portfolio section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -334,7 +334,7 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
     
     <!--End Project Portfolio Section -->
 
