--- a/index.html
+++ b/index.html
@@ -327,8 +327,10 @@
             <div class="portfolio-wrap">
               <img src="assets/img/Project/UUMI_APP/UUMi_setting.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/Project/UUMI_APP/UUMi_setting.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                
+                <a href="assets/img/Project/UUMI_APP/UUMi_setting.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a> 
+              </div>
+              <div class="portfolio-links">
+                <a href="assets/img/Project/UUMI_APP/UUMI_launching_view.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a> 
               </div>
             </div>
           </div>
