--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/Project/UUMI_APP/UUMi_flashcard.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/Project/UUMI_APP/UUMi_flashcard.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/Project/UUMI_APP/UUMi_flashcard.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
                 
               </div>
             </div>
@@ -327,17 +327,24 @@
             <div class="portfolio-wrap">
               <img src="assets/img/Project/UUMI_APP/UUMi_setting.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/Project/UUMI_APP/UUMi_setting.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a> 
+                <a href="assets/img/Project/UUMI_APP/UUMi_setting.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
               </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/Project/UUMI_APP/UUMI_launching_view.png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/Project/UUMI_APP/UUMI_launching_view.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a> 
               </div>
             </div>
           </div>
+
         </div>
       </div>
     </section>
-    
+
     <!--End Project Portfolio Section -->
 
 
