--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
+          <!-- launching -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap" style="border-radius: 15px; overflow: hidden;">
               <img src="assets/img/Project/UUMI_APP/UUMi_launching_1.png" class="img-fluid" alt="">
@@ -338,7 +339,7 @@
               </div> -->
             </div>
           </div>
-          
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/Project/UUMI_APP/UUMi_Statistic.png" class="img-fluid" alt="">
@@ -351,6 +352,15 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/Project/UUMI_APP/UUMi_setting.png" class="img-fluid" alt="">
+              <!-- <div class="portfolio-links">
+                <a href="assets/img/Project/UUMI_APP/UUMi_home.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+              </div> -->
+            </div>
+          </div>
+          
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/Project/UUMI_APP/UUMi_setting_2.png" class="img-fluid" alt="">
               <!-- <div class="portfolio-links">
                 <a href="assets/img/Project/UUMI_APP/UUMi_home.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
               </div> -->
