--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
           <!-- <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li> -->
           <!-- <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li> -->
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+          <li><a href="assets/cv/VuongKhacDuy_iOS Developer.pdf" class="nav-link" download><i class="bx bx-download"></i> <span>Download CV</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
@@ -177,6 +178,9 @@
 
         <div class="section-title">
           <h2>Resume</h2>
+          <!-- <div class="text-center mt-3">
+            <a href="assets/cv/VuongKhacDuy_iOS Developer.pdf" download class="btn btn-primary" style="background: #149ddd; border-color: #149ddd; padding: 10px 24px; color: #fff; border-radius: 4px; transition: 0.4s;"><i class="bx bx-download"></i> Tải CV</a>
+          </div> -->
           <!-- <p>I am currently working as an iOS developer at CMCGlobal, and have joined various mobile application projects. Being experienced and having a comprehensive knowledge of creating user-friendly.</p>
           <p>I have also experience includes working with small to large applications such as: 
             <ul>
