--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vuong Khac Duy Portfolio</title>
-    <link rel="icon" href="/assets/img/iron-man.png" />
+    <link rel="icon" href="./assets/img/iron-man.png" />
     
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
@@ -26,6 +26,6 @@
   </head>
   <body>
     <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
