deploy: b78f84f40895fa04fb5e464066e52ed8e9d1995e

--- a/index.html
+++ b/index.html
@@ -209,6 +209,12 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
+              <h4>Business Administration</h4>
+              <p>Hoa Sen University</p>
+              <h5>2024 - 2017</h5>
+              <p><em>8 Nguyen Van Trang, Ben Thanh Ward, District 1, Ho Chi Minh</em></p>
+            </div>
+            <div class="resume-item">
               <h4>Bachelor of Computer Science</h4>
               <p>University of the West of England</p>
               <h5>2017 - 2019</h5>
@@ -218,7 +224,7 @@
               <h4>Bachelor of Computer Science</h4>
               <p>International University</p>
               <h5>2014 - 2017</h5>
-              <p><em>Quarter 6, Linh Trung Ward, Thu Duc City, HCMC</em></p>
+              <p><em>VNUHCM Township, Quarter 33, Linh Xuan Ward, Ho Chi Minh City</em></p>
             </div>
           </div>
 
