--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             <div class="resume-item">
               <h4>Business Administration</h4>
               <p>Hoa Sen University</p>
-              <h5>2024 - 2017</h5>
+              <h5>2024 - Current</h5>
               <p><em>8 Nguyen Van Trang, Ben Thanh Ward, District 1, Ho Chi Minh</em></p>
             </div>
             <div class="resume-item">
