--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
           <ul>
             <li>Experience working with UIKit and SwiftUI frameworks</li>
             <li>Experience working with Model MVC, MVVM, Viper, CocoaPods</li>
-            <li>Experience working with RxSwift, third-party libraries, UIkit, SwiftUI</li>
+            <li>Experience working with UIkit, SwiftUI, RxSwift, third-party libraries</li>
             <li>Experience working with Python, Keras, TensorFlow</li>
             <li>Familiarity with JSON and REST-based APIs</li>
-            <li>Experience working with Firebase, MongoDB </li>
+            <li>Experience working with Firebase, MongoDB, SQLite, CoreData, SwiftData</li>
             <li>Experience working with SVN</li>
             <li>Tools we use: Git, Gitlab, Bitbucket, Jira Software, Slack, latest XCode, TablePlus, GraphQL, Postman, visual studio code, Anaconda, Jupyter Notebook, Google Colab</li>
             <li>Effective organization of ideas for logical presentation and acceptance, communication,
@@ -237,6 +237,8 @@
                 <li>Maintained existing functions, and created new ones based on customer requirements.</li>
                 <li>Supervise the assessment of all materials in order to ensure quality and accuracy of the productions</li>
                 <li>Manage time, and estimate plan to ensure completing the app on time.</li>
+                <li>Conducted research and implemented mobile application security testing, ensuring compliance with OWASP MASVS and MASTG standards.</li>
+                <li>Technologies used: Swift, UIKit, MVC, RESTful APIs, SQLite, Gitlab, figma, Xcode, .</li>
               </ul>
             </div>
 
@@ -246,10 +248,9 @@
               <h5>2022 - 2023</h5>
               <p><em>CMC Creative Space, Street 19, District 7,Tan Thuan Zone Ho Chi Minh City</em></p>
               <ul>
-                <li>Solved problems as a team leader, maintained existing functions, and created new ones based on customer requirements.</li>
-                <li>Delegated tasks to development team members and provided guidance on all aspects of the project.</li>
-                <li>Supervised the assessment of all materials to ensure quality and accuracy of the production.</li>
+                <li>Solved problems, maintained existing functions, and created new ones based on customer requirements.</li>
                 <li>Managed time and estimated plans to ensure the app was completed on schedule.</li>
+                <li>Technologies used: Swift, UIKit, MVC, RESTful APIs, SQLite, Gitlab, figma and Xcode.</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -258,7 +259,8 @@
               <p><em>Long Thanh My Ward 9 District, Thu Duc City, Ho Chi Minh City 71216</em></p>
               <ul>
                 <li>Participate in software development and support</li>
-                <li>Product quality assurance</li>
+                <li>Create, maintain features</li>
+                <li>Technologies used: Swift, UIKit, MVC, RESTful APIs, SQLite, Gitlab, figma and Xcode.</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -267,11 +269,13 @@
               <p><em>Bình Thạnh District, Ho Chi Minh City, Viet Nam</em></p>
               <ul>
                 <li>Participate in software development and support</li>
+                <li>Reskin, develop applications</li>
+                <li>Create, maintain features for mobile applications</li>
+                <li>Technologies used: Swift, UIKit, Viper, RESTful APIs, Firebase, Git, and Xcode.</li>
               </ul>
             </div>
           </div>
         </div>
-
       </div>
     </section>
     <!-- End Resume Section -->
@@ -496,7 +500,9 @@
     <section id="contact" class="contact">
       <div class="container">
         <div class="row" data-aos="fade-in">
-
+        <div class="section-title">
+          <h2>Contact</h2>
+        </div>
           <div class="col-lg-5 d-flex align-items-stretch">
             <div class="info">
               <div class="address">
